- Added possibility for providing a list of safe IPs to HttPlaceholder for reading and using the `X-Forwarded-For`, `X-Forwarded-Host` and `X-Forwarded-Proto` headers (https://github.com/dukeofharen/httplaceholder/pull/235).

# BREAKING CHANGES
-

[1.4.1]
- Added license and logo to Nuget packages (https://github.com/dukeofharen/httplaceholder/issues/76 and https://github.com/dukeofharen/httplaceholder/issues/81).
- Added documentation to all classes of .NET client and HttPlaceholder (https://github.com/dukeofharen/httplaceholder/pull/213).
- When setting the scenario with an empty state; set the scenario state to the default state of "Start" (https://github.com/dukeofharen/httplaceholder/pull/214).
- Added icon at stub when stub is read-only (https://github.com/dukeofharen/httplaceholder/pull/215).
- When updating stub, make sure no read-only stub exists with the same ID (https://github.com/dukeofharen/httplaceholder/pull/215).
- Updated UI so the "Disable stubs", "Enable stubs" and "Delete stubs" do not work with "read-only" stubs (https://github.com/dukeofharen/httplaceholder/pull/215).
- Created a scheduled job that is used for cleaning old requests (https://github.com/dukeofharen/httplaceholder/issues/216).
    - By default, this job is enabled. This means that the old requests will be cleaned once in every 5 minutes. When this job is enabled, the cleaning of requests does not occur anymore after any stub request.
    - This job can, however, be turned off. Configuration parameter `cleanOldRequestsInBackgroundJob` has been added for this purpose.
    - This configuration parameter has been added because some people host HttPlaceholder in a cloud environment with a serverless database. Performing a query every 5 minutes can crank up the costs. By cleaning the requests in the old way, no more SQL queries than necessary will be performed so the costs stay (relatively) low.