@@ -48,13 +48,8 @@ public class UpdateStubCommandHandler : IRequestHandler<UpdateStubCommand>
             throw new ValidationException(string.Format(exceptionFormat, request.Stub.Id));
         }
 
-        // Delete the stub if the ID has changed.
-        if (!string.Equals(request.StubId, request.Stub.Id, StringComparison.OrdinalIgnoreCase))
-        {
-            await _stubContext.DeleteStubAsync(request.StubId);
-            await _stubContext.DeleteStubAsync(request.Stub.Id);
-        }
-
+        await _stubContext.DeleteStubAsync(request.StubId);
+        await _stubContext.DeleteStubAsync(request.Stub.Id);
         await _stubContext.AddStubAsync(request.Stub);
 
         return Unit.Value;
